--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
     "name": "@hckrnews/normalizer",
     "description": "Normalizer objects",
-    "version": "0.3.0",
+    "version": "0.3.1",
     "author": {
         "name": "Pieter Wigboldus",
         "url": "https://hckr.news/"
     },
-    "license": "LGPL-3.0",
+    "license": "MIT",
     "scripts": {
         "lint": "eslint src/*.js --config .eslintrc",
         "lint:report": "eslint src/*.js --config .eslintrc -f json -o report.json",
         "lint:fix": "eslint src/*.js --config .eslintrc --fix",
         "test": "jest",
         "test:watch": "jest src --watch",
-        "coveralls": "jest && codecov && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
         "cpd": "node_modules/jscpd/bin/jscpd src",
         "vulnerabilities": "npm audit --production"
     },
@@ -27,36 +26,34 @@
         "@babel/eslint-parser": "^7.14.7",
         "@babel/plugin-transform-modules-commonjs": "^7.14.0",
         "@babel/preset-env": "^7.12.11",
-        "@hckrnews/eslint-config": "^2.1.0",
-        "@jest/globals": "^27.0.6",
-        "babel-jest": "^27.2.4",
-        "codecov": "^3.8.1",
-        "coveralls": "^3.1.0",
+        "@hckrnews/eslint-config": "^3.0.0",
+        "@jest/globals": "^29.0.0",
+        "babel-jest": "^29.0.0",
         "eslint": "^8.6.0",
         "eslint-config-airbnb-base": "^15.0.0",
-        "eslint-config-prettier": "^8.2.0",
-        "eslint-plugin-html": "^6.1.2",
+        "eslint-config-prettier": "^9.0.0",
+        "eslint-plugin-html": "^7.0.0",
         "eslint-plugin-import": "^2.23.4",
         "eslint-plugin-jsx-a11y": "^6.4.1",
-        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-prettier": "^5.0.0",
         "esm": "^3.2.25",
-        "jest": "^27.2.4",
-        "jest-junit": "^13.0.0",
+        "jest": "^29.0.0",
+        "jest-junit": "^16.0.0",
         "jest-sonar-reporter": "^2.0.0",
         "jscpd": "^3.3.26",
-        "prettier": "^2.2.0"
+        "prettier": "^3.0.0"
     },
     "repository": {
         "type": "git",
         "url": "https://github.com/hckrnews/normalizer"
     },
     "engines": {
-        "node": ">= 16"
+        "node": ">= 18"
     },
     "keywords": [
         "normalizer"
     ],
     "dependencies": {
-        "@hckrnews/objects": "^5.0.0"
+        "@hckrnews/objects": "^6.0.0"
     }
 }
