Fix lint issues
Fix breaking dependency change

--- a/.eslintrc
+++ b/.eslintrc
@@ -21,6 +21,7 @@
         ]
     },
     "parserOptions": {
+        "ecmaVersion": "latest",
         "sourceType": "module",
         "parser": "@babel/eslint-parser",
         "babelOptions": {
