--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.projectKey=hckrnews_normalizer
 
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
-sonar.sources=.
+sonar.sources=./src
 sonar.exclusions=**/__**__/*.js
 sonar.language=js
 sonar.tests=./src/__tests__
